# check-my-plants

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
secret/: env.dev
secrets/: env.dev
server/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml  setup.cfg
server/src/: main.py  settings.py
server/src/api/forms/: generic.py  mixins.py  plants.py  users.py
server/src/api/forms/validators/: generic.py  plants.py  users.py
server/src/api/middleware/: authentication.py  context.py  cookie_scheme.py  response.py
server/src/api/v1/: plants.py  users.py
server/src/api/v1/admin/: __init__.py  plants.py  users.py
server/src/api/v1/app/: __init__.py  plants.py  users.py
server/src/api/v1/jinja/: plants.py
server/src/database/: base_class.py  config.py  create_superuser.py  migrate.py  mixins.py  session.py
server/src/database/crud/: plants.py  users.py
server/src/database/models/: __init__.py  enums.py  generic.py  images.py  plants.py  users.py
server/src/schemas/: generic.py  jwt_token.py  plants.py  users.py
server/src/services/: hashing.py  images.py  jwt_token.py
server/static/: test.html
server/templates/components/: card.html  error-handler.html  footer.html  message-handler.html  navbar.html
server/templates/forms/: change_password.html  login.html  plant.html  plant_create.html  register.html
server/templates/plants/: card.html  create.html  dashboard.html  details.html  edit.html
server/templates/shared/: 403-page.html  404-page.html  base.html
server/templates/users/: change_password.html  login.html  profile.html  register.html
server/tests/: conftest.py
server/tests/test_api/: test_plants_api.py  test_users_api.py
server/tests/test_app/: test_plants_app.py  test_users_app.py
server/tests/test_config/: test_app_events.py  test_database_config.py
